docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.testimonial.scss
.hb-testimonial {
  &__wrapper {
    padding: hb-calculate-rems(40px) hb-calculate-rems(24px);
    border-width: hb-calculate-rems(1px);
    border-style: solid;

    @include grid-media-min('lg') {
      padding: hb-calculate-rems(42px) hb-calculate-rems(45px);
    }

    @include hb-themes(('colorful', 'airy')) {
      border-color: var(--palette--primary);

      .hb-dark-pattern .hs-paragraph-style--well &,
      .hb-dark-pattern .hs-paragraph-style--well-full-width & {
        border-color: var(--palette--primary);
      }
    }

    @include hb-traditional {
      border-color: var(--palette--secondary);

      .hb-dark-pattern .hs-paragraph-style--well &,
      .hb-dark-pattern .hs-paragraph-style--well-full-width & {
        border-color: var(--palette--secondary);
      }
    }

    .hb-dark-pattern & {
      border-color: var(--palette--white);
    }
  }

  &__author-block {
    display: flex;
    align-items: center;
    flex-direction: column;
    max-width: 100%;
    border-width: hb-calculate-rems(1px);

    @include grid-media-min('sm') {
      max-width: 100%;
      width: 100%;
      flex-direction: row;
    }

    .hb-dark-pattern & {
      border-color: var(--palette--white);
    }

    @include hb-themes(('colorful', 'airy')) {
      border-color: var(--palette--secondary);

      .hb-dark-pattern .hs-paragraph-style--well &,
      .hb-dark-pattern .hs-paragraph-style--well-full-width & {
        border-color: var(--palette--secondary);
      }
    }

    @include hb-traditional {
      border-color: var(--palette--tertiary);

      .hb-dark-pattern .hs-paragraph-style--well &,
      .hb-dark-pattern .hs-paragraph-style--well-full-width & {
        border-color: var(--palette--tertiary);
      }
    }

    // allow more breathing room for content when 2 testimonials
    // are placed beside each other in a well
    .counted-items-2 & {
      flex-direction: column;

      @include grid-media-min('xl') {
        flex-direction: row;
      }
    }

    .counted-items-3 & {
      flex-direction: column;
    }

    .hb-testimonial--top & {
      padding-top: hb-calculate-rems(32px);
      margin-top: hb-calculate-rems(18px);
      border-top-style: solid;
    }

    .hb-testimonial--bottom & {
      padding-bottom: hb-calculate-rems(32px);
      margin-bottom: hb-calculate-rems(18px);
      border-bottom-style: solid;
    }
  }

  &__image {
    min-width: hb-calculate-rems(100px);
    width: hb-calculate-rems(100px);
    margin: 0 hb-calculate-rems(20px) 0 0;

    img {
      max-width: inherit;
      width: hb-calculate-rems(100px);
      height: hb-calculate-rems(100px);
      object-fit: cover;
    }

    @include hb-themes(('colorful', 'airy')) {
      img {
        border-radius: 50%;
      }
    }
  }

  &__name {
    font-weight: hb-theme-font-weight(semibold);

    @include hb-themes(('colorful', 'airy')) {
      color: var(--palette--primary);

      .hb-dark-pattern .hs-paragraph-style--well &,
      .hb-dark-pattern .hs-paragraph-style--well-full-width & {
        color: var(--palette--primary);
      }
    }

    @include hb-traditional {
      color: var(--palette--secondary);

      .hb-dark-pattern .hs-paragraph-style--well &,
      .hb-dark-pattern .hs-paragraph-style--well-full-width & {
        color: var(--palette--secondary);
      }
    }

    .hb-dark-pattern & {
      color: var(--palette--white);
    }
  }

  &__position {
    font-size: hb-calculate-rems(16px);
    color: var(--palette--gray-dark);

    +.hb-testimonial__link {
      padding-top: hb-calculate-rems(16px);
    }

    .hb-dark-pattern .hs-paragraph-style--well &,
    .hb-dark-pattern .hs-paragraph-style--well-full-width & {
      color: var(--palette--gray-dark);
    }

    .hb-dark-pattern & {
      color: var(--palette--white);
    }
  }

  &__link {
    position: relative;

    a {
      @include hb-more-link;
      font-weight: hb-theme-font-weight(regular);

      @include hb-traditional {
        font-size: hb-calculate-rems(14px);

        &::after {
          height: hb-calculate-rems(22.5px);
        }
      }

      [class*='-pairing-'] .hb-dark-pattern &,
      .hb-dark-inversion .views-element-container & {
        // make arrow and text color white for all themes
        color: var(--palette--white);

        &::after {
          @include hb-icon-link-arrow('white');
          background-size: 85%;
        }

        &:hover,
        &:focus {
          color: var(--palette--white);

          &::after {
            @include hb-icon-link-arrow('white');
            background-size: 85%;
          }
        }
      }

      .hb-dark-pattern .hs-paragraph-style--well &,
      .hb-dark-pattern .hs-paragraph-style--well-full-width & {
        color: var(--palette--secondary);

        @include hb-themes(('colorful', 'airy')) {
          .hc-pairing-ocean & {
            color: var(--palette--secondary-darken-12);
          }
        }

        &::after {
          @include hb-icon-link-arrow('secondary');
          background-size: 85%;

          @include hb-themes(('colorful', 'airy')) {
            .hc-pairing-ocean & {
              @include hb-icon-link-arrow('secondary-darken-12');
              background-size: 85%;
            }
          }
        }

        &:hover,
        &:focus {
          color: var(--palette--secondary-darken-12);

          .hc-pairing-ocean & {
            color: var(--palette--primary-dark);
          }

          .ht-pairing-warbler & {
            color: var(--palette--secondary-darken-12);
          }

          &::after {
            @include hb-icon-link-arrow('secondary-darken-12');
            background-size: 85%;

            @include hb-colorful {
              .hc-pairing-ocean & {
                @include hb-icon-link-arrow('primary-dark');
                background-size: 85%;
              }
            }
          }
        }
      }
    }
  }

  figure.hb-testimonial__content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 0;

    .hb-testimonial--bottom & {
      padding-top: hb-calculate-rems(6px);
    }
  }

  blockquote.hb-testimonial__quote {
    width: 100%;
    margin: 0;
    font-size: hb-calculate-rems(20px);
    line-height: hb-calculate-rems(28.4px);
    color: var(--palette--black);

    .hb-dark-pattern .hs-paragraph-style--well &,
    .hb-dark-pattern .hs-paragraph-style--well-full-width & {
      color: var(--palette--black);
    }

    @include hb-traditional {
      font-family: $hb-traditional-font--sans;
    }
  }
}

